--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "react-i18next": "^12.1.4"
   },
   "devDependencies": {
-    "babel-plugin-i18next-extract": "^0.9.0"
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
+    "babel-plugin-i18next-extract": "^0.9.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.0"
   }
 }
