--- a/package.json
+++ b/package.json
@@ -12,20 +12,26 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "extract": "babel --config-file ./babel-extract.config.js -o tmp/chunk.js 'src/**/*.{js,jsx}' && rm -rf tmp"
   },
   "dependencies": {
     "gatsby": "^5.3.3",
     "gatsby-plugin-image": "^3.3.2",
+    "gatsby-plugin-mdx": "^5.4.0",
+    "gatsby-plugin-react-i18next": "^3.0.1",
     "gatsby-plugin-sharp": "^5.3.2",
     "gatsby-source-filesystem": "^5.3.1",
     "gatsby-transformer-sharp": "^5.3.1",
+    "i18next": "^22.4.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-i18next": "^12.1.4",
+    "react-markdown": "^8.0.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@babel/cli": "^7.20.7",
+    "babel-plugin-i18next-extract": "^0.9.0",
     "eslint": "^8.32.0",
     "eslint-plugin-react": "^7.32.0"
   }
